--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
 
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Zen+Dots&display=swap');
+
 :root {
     /* Primary Colors */
     --Marine_blue: hsl(213, 96%, 18%);
@@ -65,13 +67,14 @@
 
     /* Typography */
     --Montserrat: 'Montserrat', sans-serif;
+    --Gemstones: 'Press Start 2P', cursive;
     --Font_size: 1.6rem;
     --Font_weight: 400;
 
 }
 
 html {    
-    background-color: var(--Clown_Light_Blue);
+    background-color: var(--Muted_Blue_Gray);
     box-sizing: border-box;
     padding: 0;
 }
@@ -108,6 +111,12 @@ html {
     margin: 0;
     margin-bottom: 20px;
     border: var(--Darkish_gray) 1px solid;
+    /* font-family: 'Fjalla One', sans-serif; */
+    font-family: 'Zen Dots', cursive;
+}
+
+.game>h1 {
+    font-family: var(--Gemstones)
 }
 
 .obj {
